paywall finish ui

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
     <string name="take_a_photo_to_identify_the_plant">Take a photo to <b>identify</b>\nthe plant!</string>
     <string name="_continue">Continue</string>
     <string name="get_plant_care_guides">Get plant <b>care guides</b></string>
+    <string name="access_all_features">Access All Features</string>
+    <string name="plantapp_premium"><b>PlantApp</b> Premium</string>
+    <string name="after_the_3_day_free_trial_period_you_ll_be_charged_274_99_per_year_unless_you_cancel_before_the_trial_expires_yearly_subscription_is_auto_renewable">After the 3-day free trial period you’ll be charged ₺274.99 per year unless you\ncancel before the trial expires. Yearly Subscription is Auto-Renewable</string>
+    <string name="terms_privacy_restore">Terms • Privacy • Restore</string>
+    <string name="try_free_for_3_days">Try free for 3 days</string>
 </resources>
