--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="after_the_3_day_free_trial_period_you_ll_be_charged_274_99_per_year_unless_you_cancel_before_the_trial_expires_yearly_subscription_is_auto_renewable">After the 3-day free trial period you’ll be charged ₺274.99 per year unless you\ncancel before the trial expires. Yearly Subscription is Auto-Renewable</string>
     <string name="terms_privacy_restore">Terms • Privacy • Restore</string>
     <string name="try_free_for_3_days">Try free for 3 days</string>
+    <string name="hi_plant_lover">Hi, plant lover!</string>
+    <string name="good_afternoon"><b>Good Afternoon!</b> ⛅</string>
+    <string name="tap_to_upgrade_your_account">Tap to upgrade your account!</string>
+    <string name="free_premium_available">FREE Premium Available</string>
 </resources>
