--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="_1_month">1 Month</string>
     <string name="_2_99_month_auto_renewable">$2.99/month, auto renewable</string>
     <string name="how_to_identify_plants_easily_with_plantapp">How to identify plants easily with PlantApp?</string>
+    <string name="edible_plants">Edible Plants</string>
 </resources>
